flask server done and api update
